--- a/.gitignore
+++ b/.gitignore
@@ -370,5 +370,11 @@ TSWLatexianTemp*
 # standalone packages
 *.sta
 
+#VScode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
 
 
